--- a/src/App.scss
+++ b/src/App.scss
@@ -104,13 +104,13 @@ body {
 header {
   font-size: 16px;
   position: fixed;
-
+  background-color: #caccad;
   z-index: 99;
   width: 100%;
   font-weight: "700";
   .container {
     .row {
-      height: 128px;
+      height: 95px;
 
       .logo {
         a {
